[gd_scene load_steps=5 format=3 uid="uid://dyqueqwad116k"]

[ext_resource type="Script" path="res://src/item/block.gd" id="1_tcbjj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jvgn2"]
size = Vector2(60, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_820oy"]
size = Vector2(90, 90)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_whm10"]
custom_solver_bias = 1.0
size = Vector2(110, 110)

[node name="Block" type="CollisionShape2D" node_paths=PackedStringArray("texture", "hitbox", "hitbox_timer")]
shape = SubResource("RectangleShape2D_jvgn2")
script = ExtResource("1_tcbjj")
texture = NodePath("Sprite2D")
hitbox = NodePath("HitBox")
hitbox_timer = NodePath("HitBoxTimer")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
shape = SubResource("RectangleShape2D_820oy")

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_whm10")

[node name="HitBoxTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="pressed" from="TouchScreenButton" to="." method="_on_touch_screen_button_pressed"]
[connection signal="released" from="TouchScreenButton" to="." method="_on_touch_screen_button_released"]
[connection signal="timeout" from="HitBoxTimer" to="." method="_on_hit_box_timer_timeout"]
